# POC

document-summarizer/: README.md  app.py  main.py  prd.md  pyproject.toml  requirements.txt  setup.py
document-summarizer/data/index/: chunks_metadata.pkl  document_map.json  faiss.index
document-summarizer/src/: __init__.py
document-summarizer/src/embeddings/: __init__.py  manager.py
document-summarizer/src/indexing/: __init__.py  faiss_manager.py
document-summarizer/src/parsers/: __init__.py  base.py  docx_parser.py  factory.py  pdf_parser.py  pptx_parser.py  text_parser.py  xlsx_parser.py
document-summarizer/src/ui/: __init__.py  main.py
document-summarizer/src/utils/: __init__.py  document_processor.py  gemini.py  logger.py
text-to-svg/: README.md  pyproject.toml  requirements.txt
text-to-svg/src/: app.py  run_server.py  test_client.py
text-to-svg/src/components/: document_editor.py  visualization_panel.py
text-to-svg/src/config/: settings.py
text-to-svg/src/prompts/: visualization_prompts.yaml
text-to-svg/src/services/: gemini_service.py  text_to_svg_client.py  text_to_svg_service.py
text-to-svg/src/utils/: logger.py  prompt_loader.py  state_manager.py
